@@ -1,3 +1,8 @@
+2008-10-20  Hans Boehm <Hans.Boehm@hp.com>
+	* doc/README: Make it clearer when Makefile.direct is assumed.
+	* cord/cord.am: install include/cord.h.
+	* Makefile.in: Regenerate.
+
 2008-09-24  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidanski)
 	* win32_threads.c (GC_pthread_join, GC_pthread_start_inner):
 	Remove unused variables.
